done adding button

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>My first Portfolio</h1>
 <p>Feeling happy now</p>
 <p>Extra things added</p>
+<input type="text">
+<br>
+<button>Click Me</button>
